[package]
name = "ordum-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.32"
parity-scale-codec = "3.2.1"
schnorrkel = "0.10.2"
sp-core = {version ="13.0.0", features =["full_crypto"]}
sp-core-hashing = "6.0.0"
sp-keyring = "15.0.0"
spinoff = "0.6.0"
subxt = { version ="0.25.0" }
subxt-cli = "0.25.0"
tokio = { version = "1.8", features = ["full"] }
