[package]
name = "ordum-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
base64 = "0.21.0"
clap = "4.0.32"
frame-support = "13.0.0"
parity-scale-codec = "3.2.1"
sc-finality-grandpa = "0.19.0"
schnorrkel = "0.10.2"
sp-core = {version ="11.0.0", features =["full_crypto"]}
sp-core-hashing = "6.0.0"
sp-keyring = "15.0.0"
sp-runtime = "15.0.0"
spinoff = "0.6.0"
subxt = { version = "0.26.0" }
subxt-cli = "0.26.0"
tokio = { version = "1.8", features = ["full"] }

# Phala blockchain to access phaxt and pherry
phala-types = { package ="phala-types", git ="https://github.com/Phala-Network/phala-blockchain","branch" ="master"}
phala-crypto = { package ="phala-crypto", git ="https://github.com/Phala-Network/phala-blockchain","branch" ="master"}
phactory-api = { package ="phactory-api",features = ["pruntime-client"], git ="https://github.com/Phala-Network/phala-blockchain","branch" ="master"}
phala-pallet = { package ="phala-pallets", git ="https://github.com/Phala-Network/phala-blockchain","branch" ="master"}